--- a/index.html
+++ b/index.html
@@ -42,20 +42,24 @@
     </header>
 
     <div id="main-container" class="container">
-        <section class="main-section">
+        <section class="main-section font-size:">
             <h1>About Me</h1>
 
-            <img src="" class="auth-image" alt="William Dunn">
-
+            <div class="text-center">
+                <img src="assets/images/williamimg.jpg" class="rounded float-left" width="200px" height="200px">
+              </div>
+        <div class="text-right">     
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit quidem doloribus reiciendis ut in architecto unde libero vero accusamus nulla vitae cum delectus commodi ex, quos inventore rem ad laboriosam facilis modi. Veritatis dolor neque reprehenderit, ducimus adipisci magni laboriosam iste quo expedita quae provident pariatur perspiciatis commodi. Libero ab maiores, cum sed provident ipsum inventore nihil nobis! Veniam, suscipit doloremque saepe accusamus dignissimos harum voluptate deleniti reprehenderit velit consectetur hic, maxime reiciendis ab aperiam magni obcaecati earum ipsum laborum recusandae ducimus quae minima blanditiis. Veritatis dignissimos incidunt, accusamus sapiente quos nesciunt nihil quae aut vel? Placeat maiores tempore a dolorum rem illo. Earum, error laborum est iste beatae aspernatur tempora in provident aliquid cumque maxime iusto. Libero, eligendi saepe eius ipsam, assumenda ratione dignissimos obcaecati aliquid quibusdam alias explicabo a distinctio magni itaque sit necessitatibus ea animi ad totam provident cum quae! Repellendus porro illo praesentium eaque dolor ut recusandae totam. Explicabo doloremque, nobis accusantium quidem libero quisquam officiis. Inventore veritatis tempore, nobis quidem vero sunt suscipit laudantium itaque aliquam molestias exercitationem, excepturi et similique cum natus nihil, ab reiciendis ullam nam totam aut optio vel ducimus? Beatae dolorum accusamus, odit pariatur tempora distinctio velit voluptas rerum deserunt ducimus animi facilis commodi voluptate nostrum veritatis. Consequatur, accusamus nesciunt blanditiis id est ipsum consectetur animi ea architecto modi sed. Quos totam aspernatur itaque debitis? Esse illum quaerat facere velit quas laudantium assumenda repellat mollitia. Fugit ducimus excepturi labore provident tempore numquam, corporis asperiores? Consequatur reiciendis autem nesciunt ad eius deserunt?</p>
-
+        </div>
         </section>
 
     </div>
 
     <footer>
         <div class="container">
-            Copyright &copy;
+            <div class="text-center">        
+                Copyright &copy;
+            </div>        
         </div>
     </footer>
 
