--- a/portfolio.html
+++ b/portfolio.html
@@ -4,23 +4,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>William Dunn's Website</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
     <header id="masthead">
         <div class="container">
-            <a href="index.html" id="logo">William Dunn</a>
-            <nav>
-                <a href="index.html">About Me</a>
-                <a href="portfolio.html">My Portfolio</a>
-                <a href="contact.html">Contact Me</a>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="d-flex flex-grow-1">
+                    <span class="w-100 d-lg-none d-block"></span>
+                    <a class="navbar-brand d-none d-lg-inline-block" href="index.html">
+                        William Dunn
+                    </a>
+                    <a class="navbar-brand-two mx-auto d-lg-none d-inline-block" href="#">
+                        <img src="//placehold.it/40?text=LOGO" alt="logo">
+                    </a>
+                    <div class="w-100 text-right">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                    </div>
+                </div>
+                <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
+                    <ul class="navbar-nav ml-auto flex-nowrap">
+                        <li class="nav-item">
+                            <a href="index.html" class="nav-link m-2 menu-item nav-active">About Me</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="portfolio.html" class="nav-link m-2 menu-item">My Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="contact.html" class="nav-link m-2 menu-item">Contact Me</a>
+                        </li>
+                    </ul>
+                </div>
             </nav>
         </div>
     </header>
-    
-    <div id="main-container" class="container">
-        <section class="main-section">
-            <h1>My Portfolio</h1>
-        </section>
-    </div>
+    <div class="row">
+        <div class="column">
+          <a href="https://en.wikipedia.org/wiki/Death_Valley" target="_blank"><img src="assets/images/portfolioimages/portfolio1.jpg"></a>
+          <a href="https://en.wikipedia.org/wiki/Mount_St._Helens" target="_blank"><img src="assets/images/portfolioimages/portfolio2.jpg"></a>
+          <a href="https://en.wikipedia.org/wiki/Tunguska_event" target="_blank"><img src="assets/images/portfolioimages/portfolio3.png"></a>
+        </div>
+        <div class="column">
+            <a href="https://en.wikipedia.org/wiki/Fire_whirl" target="_blank"><img src="assets/images/portfolioimages/portfolio4.jpg"></a>
+            <a href="https://en.wikipedia.org/wiki/Rattlesnake" target="_blank"><img src="assets/images/portfolioimages/portfolio5.jpg"></a>
+            <a href="https://en.wikipedia.org/wiki/Gibson_Les_Paul" target="_blank"><img src="assets/images/portfolioimages/portfolio6.jpg"></a>
+    <footer>
+        <div class="container">
+            <div class="text-center">        
+                Copyright &copy;
+            </div>        
+        </div>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
