Added better image formatting for Portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,14 +42,14 @@
     </header>
     <div class="row">
         <div class="column">
-          <a href="https://en.wikipedia.org/wiki/Death_Valley" target="_blank"><img src="assets/images/portfolioimages/portfolio1.jpg"></a>
-          <a href="https://en.wikipedia.org/wiki/Mount_St._Helens" target="_blank"><img src="assets/images/portfolioimages/portfolio2.jpg"></a>
-          <a href="https://en.wikipedia.org/wiki/Tunguska_event" target="_blank"><img src="assets/images/portfolioimages/portfolio3.png"></a>
+          <a href="https://en.wikipedia.org/wiki/Death_Valley" target="_blank"><img src="assets/images/portfolioimages/portfolio1.jpg" height="200px" width="200px"></a>
+          <a href="https://en.wikipedia.org/wiki/Mount_St._Helens" target="_blank"><img src="assets/images/portfolioimages/portfolio2.jpg" height="200px" width="200px"></a>
+          <a href="https://en.wikipedia.org/wiki/Tunguska_event" target="_blank"><img src="assets/images/portfolioimages/portfolio3.png" height="200px" width="200px"></a>
         </div>
         <div class="column">
-            <a href="https://en.wikipedia.org/wiki/Fire_whirl" target="_blank"><img src="assets/images/portfolioimages/portfolio4.jpg"></a>
-            <a href="https://en.wikipedia.org/wiki/Rattlesnake" target="_blank"><img src="assets/images/portfolioimages/portfolio5.jpg"></a>
-            <a href="https://en.wikipedia.org/wiki/Gibson_Les_Paul" target="_blank"><img src="assets/images/portfolioimages/portfolio6.jpg"></a>
+            <a href="https://en.wikipedia.org/wiki/Fire_whirl" target="_blank"><img src="assets/images/portfolioimages/portfolio4.jpg" height="200px" width="200px"></a>
+            <a href="https://en.wikipedia.org/wiki/Rattlesnake" target="_blank"><img src="assets/images/portfolioimages/portfolio5.jpg" height="200px" width="200px"></a>
+            <a href="https://en.wikipedia.org/wiki/Gibson_Les_Paul" target="_blank"><img src="assets/images/portfolioimages/portfolio6.jpg" height="200px" width="200px"></a>
     <footer>
         <div class="container">
             <div class="text-center">        
